--- a/src/Programming/Programming.csproj
+++ b/src/Programming/Programming.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DocuSign.eSign.dll" Version="5.9.0" />
+  </ItemGroup>
+
 </Project>
