--- a/src/ObjectOrientedPractics/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Item.cs" />
+    <Compile Include="Services\AppColor.cs" />
+    <Compile Include="Services\CustomerFactory.cs" />
+    <Compile Include="Services\ItemFactory.cs" />
     <Compile Include="Services\Validator.cs" />
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
