--- a/src/ObjectOrientedPractics/ObjectOrientedPractics/ObjectOrientedPractics.csproj
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics/ObjectOrientedPractics.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Model\Item.cs" />
-    <Compile Include="Services\AppColor.cs" />
+    <Compile Include="Services\AppColors.cs" />
     <Compile Include="Services\CustomerFactory.cs" />
     <Compile Include="Services\ItemFactory.cs" />
     <Compile Include="Services\Validator.cs" />
