--- a/src/Contacts/View/View.csproj
+++ b/src/Contacts/View/View.csproj
@@ -11,15 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModel\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="contacts_96x96.ico" />
+    <Resource Include="Resources\contacts_96x96.ico" />
   </ItemGroup>
 
 </Project>
