--- a/src/Contacts/View/View.csproj
+++ b/src/Contacts/View/View.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\contacts_96x96.ico" />
   </ItemGroup>
 
